--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
         <dependency>
             <groupId>cc.plural</groupId>
             <artifactId>jsonij</artifactId>
