--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -16,83 +16,86 @@ unameSize=48
 rankSize=48
 ppSize=36
 diffSize=24
-dataSize=30
+numberSize=30
 countSize=24
 countDiffSize=18
+timeSize=18
 
-# 组件颜色
-unameColor=000000
-ppColor=555555
-upColor=FF6060
-downColor=4466FF
-timeColor=BC2C00
-defaultColor=222222
+# 组件颜色,需要用#开头
+unameColor=#000000
+ppColor=#555555
+upColor=#FF6060
+downColor=#4466FF
+timeColor=#BC2C00
+defaultColor=#222222
 
 # 各个组件坐标，coordinate
 avax=160
-#avay=150
+# avay=150 图片的坐标是左上角，其他文字是左下角
 avay=22
+
 namex=349
 namey=60
 
 rankx=415
-ranky=118
+ranky=114
 
 rankDiffx=633
-rankDiffy=111
+rankDiffy=109
 
 ppx=469
-ppy=160
+ppy=157
 
 ppDiffx=633
-ppDiffy=155
+ppDiffy=153
 
 rScorex=370
-rScorey=208
+rScorey=206
+
 accx=357
-accy=257
+accy=255
 
 pcx=344
-pcy=304
+pcy=302
 
-tthx=335
-tthy=352
+tthx=333
+tthy=350
 
 levelx=320
-levely=400
+levely=398
 
 rScoreDiffx=650
-rScoreDiffy=205
+rScoreDiffy=203
 
 accDiffx=636
-accDiffy=253
+accDiffy=251
 
 pcDiffx=622
-pcDiffy=301
+pcDiffy=299
 
 tthDiffx=609
-tthDiffy=349
+tthDiffy=347
 
 levelDiffx=597
-levelDiffy=396
+levelDiffy=394
 
-ssCountx=342
-ssCounty=448
+ssCountx=343
+ssCounty=445
 
-sCountx=494
-sCounty=448
+sCountx=496
+sCounty=445
 
-aCountx=665
-aCounty=448
+aCountx=666
+aCounty=445
 
 ssCountDiffx=410
-ssCountDiffy=445
+ssCountDiffy=444
 
 sCountDiffx=562
-sCountDiffy=445
+sCountDiffy=444
 
 aCountDiffx=733
-aCountDiffy=445
+aCountDiffy=444
 
-timeX=802
-timeY=452
+timex=802
+timey=452
