修正大量逻辑错误

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -20,6 +20,7 @@ numberSize=30
 countSize=24
 countDiffSize=18
 timeSize=18
+tipSize=18
 
 # 组件颜色,需要用#开头
 unameColor=#000000
@@ -28,6 +29,7 @@ upColor=#FF6060
 downColor=#4466FF
 timeColor=#BC2C00
 defaultColor=#222222
+tipColor=#BC2C00
 
 # 各个组件坐标，coordinate
 avax=160
@@ -51,6 +53,9 @@ ppDiffy=153
 
 rScorex=370
 rScorey=206
+
+rScoreRankx=0
+rScoreRanky=0
 
 accx=357
 accy=255
@@ -99,3 +104,6 @@ aCountDiffy=444
 
 timex=802
 timey=452
+
+tipx=802
+tipy=422
