优化流程，在线程中就判断玩家数据合法性。预留了自定义bg和bp绘制。

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -2,8 +2,8 @@
 key=d259a80f43e73fb5c421fcbeabc7458af822be9f
 
 # 模板路径
-bg = \\bg.png
-layout = \\layout.png
+userbg = \\userbg.png
+userlayout = \\userlayout.png
 
 # 组件字体
 unameFont=Ubuntu
