添加了定时任务

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -4,7 +4,7 @@ key=d259a80f43e73fb5c421fcbeabc7458af822be9f
 # 模板路径
 userbg = \\userbg.png
 userlayout = \\userlayout.png
-
+bpbg = \\bpbg.png
 # 组件字体
 unameFont=Ubuntu
 timeFont=Ubuntu
@@ -33,7 +33,7 @@ tipColor=#BC2C00
 
 # 各个组件坐标，coordinate
 avax=160
-# avay=150 图片的坐标是左上角，其他文字是左下角
+#avay=150 图片的坐标是左上角，其他文字是左下角
 avay=22
 
 namex=349
