添加了修改/重置用户组的功能

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -1,15 +1,20 @@
 # APIKEY
 key=d259a80f43e73fb5c421fcbeabc7458af822be9f
 
+#管理员QQ，用半角逗号分隔
+admin=2307282906,1335734657
+
 # 模板路径
 userbg = \\userbg.png
 userlayout = \\userlayout.png
 bpbg = \\bpbg.png
+
 # 组件字体
 unameFont=Ubuntu
 timeFont=Ubuntu
 numberFont=Futura Std Medium
 diffFont=苹方
+tipFont=宋体
 
 # 组件字号
 unameSize=48
@@ -20,7 +25,7 @@ numberSize=30
 countSize=24
 countDiffSize=18
 timeSize=18
-tipSize=18
+tipSize=15
 
 # 组件颜色,需要用#开头
 unameColor=#000000
@@ -29,9 +34,9 @@ upColor=#FF6060
 downColor=#4466FF
 timeColor=#BC2C00
 defaultColor=#222222
-tipColor=#BC2C00
+tipColor=#666666
 
-# 各个组件坐标，coordinate
+# 用户图各个组件坐标，coordinate
 avax=160
 #avay=150 图片的坐标是左上角，其他文字是左下角
 avay=22
@@ -93,7 +98,7 @@ sCounty=445
 aCountx=666
 aCounty=445
 
-ssCountDiffx=410
+ssCountDiffx=405
 ssCountDiffy=444
 
 sCountDiffx=562
@@ -105,5 +110,8 @@ aCountDiffy=444
 timex=802
 timey=452
 
-tipx=802
-tipy=422
+tipx=718
+tipy=138
+
+tip2x=725
+tip2y=155
