添加了查询PP溢出玩家的功能，修正了一些逻辑错误

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -4,6 +4,12 @@ key=d259a80f43e73fb5c421fcbeabc7458af822be9f
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657
 
+#各个用户组PP上限
+mp5PP=4000
+mp5RiskPP=3900
+mp4PP=5100
+mp4RiskPP=5000
+
 # 模板路径
 userbg = \\userbg.png
 userlayout = \\userlayout.png
