添加了对酷Q字符串转义的修正，自定义BG。明天写绘制BP相关就可以发布第一个版本了。

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -10,8 +10,11 @@ mp5RiskPP=3900
 mp4PP=5100
 mp4RiskPP=5000
 
+#酷Q Pro程序路径，不能是中文否则读取乱码。。guava我也不知道咋回事
+path=E:\\CoolQ Pro
+
 # 模板路径
-userbg = \\userbg.png
+defaultbg = \\defaultbg.png
 userlayout = \\userlayout.png
 bpbg = \\bpbg.png
 
