待完成：修改pp3的参数，最后合成图片

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -13,19 +13,42 @@ mp4RiskPP=5000
 #酷Q Pro程序路径，不能是中文否则读取乱码。。guava我也不知道咋回事
 path=E:\\CoolQ Pro
 
-# 模板路径
+#BP换行的字符长度限制，超过这个长度的歌名+难度名会采用较宽的bg
+bplimit=80
+
+# 模板路径。也可以使用硬盘上文件的绝对路径
 defaultbg = \\defaultbg.png
 userlayout = \\userlayout.png
-bpbg = \\bpbg.png
+bptop = \\bptop.png
+bpmid2 = \\bpmid2.png
+bpmid3 = \\bpmid3.png
 
-# 组件字体
+#各个Rank小图的路径。
+A=\\A_small.png
+B=\\B_small.png
+C=\\C_small.png
+D=\\D_small.png
+X=\\X_small.png
+XH=\\XH_small.png
+S=\\S_small.png
+SH=\\SH_small.png
+
+#用户组件字体
 unameFont=Ubuntu
 timeFont=Ubuntu
 numberFont=Futura Std Medium
 diffFont=苹方
 tipFont=宋体
 
-# 组件字号
+#BP组件字体
+bpUnameFont=Ubuntu
+bpNameFont=Ubuntu
+bpDateFont=Tahoma
+bpModFont=Tahoma Bold
+bpPPFont=Tahoma Bold
+
+
+#用户名片组件字号
 unameSize=48
 rankSize=48
 ppSize=36
@@ -36,6 +59,13 @@ countDiffSize=18
 timeSize=18
 tipSize=15
 
+#BP图组件字号
+bpUnameSize=24
+bpNameSize=16
+bpDateSize=14
+bpModSize=14
+bpPPSize=24
+
 # 组件颜色,需要用#开头
 unameColor=#000000
 ppColor=#555555
@@ -44,6 +74,48 @@ downColor=#4466FF
 timeColor=#BC2C00
 defaultColor=#222222
 tipColor=#666666
+
+#BP图组件颜色
+bpUnameColor=#333a59
+bpNameColor=#1a48a5
+bpDateColor=#888888
+bpModColor=#222222
+bpPPColor=#1f69ff
+
+#BP图文字在图片上的坐标
+bpUnamex=37
+bpUnamey=25
+
+bp2Rankx=10
+bp2Ranky=17
+
+bp2Namex=26
+bp2Namey=16
+
+bp2Datex=31
+bp2Datey=34
+
+bp2Modx=493
+bp2Mody=33
+
+bp2PPx=709
+bp2PPy=25
+
+bp3Namex=26
+bp3Namey=15
+
+bp3Name+1x=7
+bp3Name+1y=30
+
+bp3Datex=31
+bp3Datey=48
+
+bp3Modx=493
+bp3Mody=47
+
+bp3PPx=709
+bp3PPy=32
+
 
 # 用户图各个组件坐标，coordinate
 avax=160
