修正了大量逻辑错误，将QQ上传图片改为提供URL，新增每天凌晨清空前一天新加群玩家的信息，新增BP绘制，1.0版本正式完成。

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -20,8 +20,8 @@ bplimit=80
 defaultbg = \\defaultbg.png
 userlayout = \\userlayout.png
 bptop = \\bptop.png
-bpmid2 = \\bpmid2.png
-bpmid3 = \\bpmid3.png
+bpmid2 = \\bpmid2v2.png
+bpmid3 = \\bpmid3v2.png
 
 #各个Rank小图的路径。
 A=\\A_small.png
@@ -42,7 +42,7 @@ tipFont=宋体
 
 #BP组件字体
 bpUnameFont=Ubuntu
-bpNameFont=Ubuntu
+bpNameFont=Ubuntu Bold
 bpDateFont=Tahoma
 bpModFont=Tahoma Bold
 bpPPFont=Tahoma Bold
@@ -87,7 +87,7 @@ bpUnamex=37
 bpUnamey=25
 
 bp2Rankx=10
-bp2Ranky=17
+bp2Ranky=2
 
 bp2Namex=26
 bp2Namey=16
@@ -99,7 +99,10 @@ bp2Modx=493
 bp2Mody=33
 
 bp2PPx=709
-bp2PPy=25
+bp2PPy=28
+
+bp3Rankx=10
+bp3Ranky=1
 
 bp3Namex=26
 bp3Namey=15
@@ -114,7 +117,7 @@ bp3Modx=493
 bp3Mody=47
 
 bp3PPx=709
-bp3PPy=32
+bp3PPy=35
 
 
 # 用户图各个组件坐标，coordinate
