为打包做的调整，将图片修改为绝对路径，作废了之前的API key

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,55 @@
 
     <name>osubot</name>
     <url>http://maven.apache.org</url>
+    <build>
+        <plugins>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+                <archive>
+                    <manifest>
+                        <mainClass>top.mothership.osubot.App</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        </plugins>
+        <!--<resources>-->
+            <!--<resource>-->
+                <!--&lt;!&ndash; 要打包的文件所在的目录 &ndash;&gt;-->
+                <!--<directory>src/main/resources</directory>-->
+                <!--&lt;!&ndash; includes 和 excludes 都可以独立配置，也可以同时配置 &ndash;&gt;-->
+
+                <!--&lt;!&ndash; 指定要打包的文件 &ndash;&gt;-->
+                <!--&lt;!&ndash;-->
+                <!--<includes>-->
+                    <!--<include>**/*.*</include>-->
+                <!--</includes>-->
+                <!--&ndash;&gt;-->
+
+                <!--&lt;!&ndash; 或者也可以剔除不需要打包的文件 &ndash;&gt;-->
+                <!--&lt;!&ndash;<excludes>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<exclude>**/*.jsp</exclude>&ndash;&gt;-->
+                <!--&lt;!&ndash;</excludes>&ndash;&gt;-->
+
+                <!--&lt;!&ndash; 指定打包到目的文件夹 &ndash;&gt;-->
+                <!--<targetPath>resources</targetPath>-->
+            <!--</resource>-->
+        <!--</resources>-->
+    </build>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
