--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -1,5 +1,5 @@
 # APIKEY
-key=d259a80f43e73fb5c421fcbeabc7458af822be9f
+key=
 
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657
@@ -11,17 +11,17 @@ mp4PP=5100
 mp4RiskPP=5000
 
 #酷Q Pro程序路径，不能是中文否则读取乱码。。guava我也不知道咋回事
-path=E:\\CoolQ Pro
+path=C:\\CoolQ Pro
 
 #BP换行的字符长度限制，超过这个长度的歌名+难度名会采用较宽的bg
 bplimit=80
 
 # 模板路径。也可以使用硬盘上文件的绝对路径
-defaultbg = \\defaultbg.png
-userlayout = \\userlayout.png
-bptop = \\bptop.png
-bpmid2 = \\bpmid2v2.png
-bpmid3 = \\bpmid3v2.png
+defaultbg=\\defaultbg.png
+userlayout=\\userlayout.png
+bptop=\\bptop.png
+bpmid2=\\bpmid2v2.png
+bpmid3=\\bpmid3v2.png
 
 #各个Rank小图的路径。
 A=\\A_small.png
@@ -35,14 +35,14 @@ SH=\\SH_small.png
 
 #用户组件字体
 unameFont=Ubuntu
-timeFont=Ubuntu
+timeFont=Ubuntu Medium
 numberFont=Futura Std Medium
 diffFont=苹方
 tipFont=宋体
 
 #BP组件字体
 bpUnameFont=Ubuntu
-bpNameFont=Ubuntu Bold
+bpNameFont=Ubuntu Medium
 bpDateFont=Tahoma
 bpModFont=Tahoma Bold
 bpPPFont=Tahoma Bold
