--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -1,8 +1,8 @@
 # APIKEY
-key=
+key=25559acca3eea3e2c730cd65ee8a6b2da55b52c0
 
 #管理员QQ，用半角逗号分隔
-admin=2307282906,1335734657
+admin=2307282906,1335734657,2643555740
 
 #各个用户组PP上限
 mp5PP=4000
