将resource图片打包放在项目里

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -1,5 +1,5 @@
 # APIKEY
-key=25559acca3eea3e2c730cd65ee8a6b2da55b52c0
+key=
 
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657,2643555740
@@ -10,7 +10,7 @@ mp5RiskPP=3900
 mp4PP=5100
 mp4RiskPP=5000
 
-#酷Q Pro程序路径，不能是中文否则读取乱码。。guava我也不知道咋回事
+#酷Q Pro程序路径
 path=C:\\CoolQ Pro
 
 #BP换行的字符长度限制，超过这个长度的歌名+难度名会采用较宽的bg
