几乎重构所有代码，数据库结构也更改了，去除了在数据库中存储用户名，降低了mysql驱动版本，去除了所有时区转换，直接在apiUtil中写重试，去除几乎所有try-catch。

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -1,5 +1,10 @@
 # APIKEY
-key=
+key=25559acca3eea3e2c730cd65ee8a6b2da55b52c0
+
+#JDBC参数
+jdbcURL=jdbc:mysql://127.0.0.1:3306/osu?characterEncoding=UTF-8&useSSL=false
+jdbcUser=root
+jdbcPwd=123456
 
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657,2643555740
@@ -11,7 +16,7 @@ mp4PP=5100
 mp4RiskPP=5000
 
 #酷Q Pro程序路径
-path=C:\\CoolQ Pro
+path=E:\\CoolQ Pro
 
 #BP换行的字符长度限制，超过这个长度的歌名+难度名会采用较宽的bg
 bplimit=80
@@ -20,8 +25,8 @@ bplimit=80
 defaultbg=\\defaultbg.png
 userlayout=\\userlayout.png
 bptop=\\bptop.png
-bpmid2=\\bpmid2v2.png
-bpmid3=\\bpmid3v2.png
+bpmid2=\\bpmid2.png
+bpmid3=\\bpmid3.png
 
 #各个Rank小图的路径。
 A=\\A_small.png
@@ -77,11 +82,12 @@ tipColor=#666666
 
 #BP图组件颜色
 bpUnameColor=#333a59
-bpNameColor=#1a48a5
+#bpNameColor=#1a48a5
+bpNameColor=#3843a6
 bpDateColor=#888888
 bpModColor=#222222
-bpPPColor=#1f69ff
-
+#bpPPColor=#1f69ff
+bpPPColor=#9492dc
 #BP图文字在图片上的坐标
 bpUnamex=37
 bpUnamey=25
