--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -16,7 +16,7 @@ mp4PP=5100
 mp4RiskPP=5000
 
 #酷Q Pro程序路径
-path=E:\\CoolQ Pro
+path=C:\\CoolQ Pro
 
 #BP换行的字符长度限制，超过这个长度的歌名+难度名会采用较宽的bg
 bplimit=80
