回去接着写排名，为加入排名做了一些预备

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -63,6 +63,7 @@ countSize=24
 countDiffSize=18
 timeSize=18
 tipSize=15
+scoreRankSize=24
 
 #BP图组件字号
 bpUnameSize=24
@@ -79,6 +80,7 @@ downColor=#4466FF
 timeColor=#BC2C00
 defaultColor=#222222
 tipColor=#666666
+scoreRankColor=#000000
 
 #BP图组件颜色
 bpUnameColor=#333a59
@@ -149,8 +151,8 @@ ppDiffy=153
 rScorex=370
 rScorey=206
 
-rScoreRankx=0
-rScoreRanky=0
+scoreRankx=0
+scoreRanky=0
 
 accx=357
 accy=255
