添加了对scorerank的二分法获取，添加了有人进群自动艾特欢迎

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -9,6 +9,7 @@ jdbcPwd=123456
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657,2643555740
 
+
 #各个用户组PP上限
 mp5PP=4000
 mp5RiskPP=3900
@@ -44,6 +45,7 @@ timeFont=Ubuntu Medium
 numberFont=Futura Std Medium
 diffFont=苹方
 tipFont=宋体
+scoreRankFont=Futura Std Medium
 
 #BP组件字体
 bpUnameFont=Ubuntu
@@ -151,8 +153,8 @@ ppDiffy=153
 rScorex=370
 rScorey=206
 
-scoreRankx=0
-scoreRanky=0
+scoreRankx=100
+scoreRanky=100
 
 accx=357
 accy=255
