微调BP样式，修正了BP日期问题，修正了DB清除临时数据错误的问题

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -48,7 +48,8 @@ tipFont=宋体
 scoreRankFont=Futura Std Medium
 
 #BP组件字体
-bpUnameFont=Ubuntu
+bpUnameFont=Tahoma
+bpQueryDateFont=Tahoma Bold
 bpNameFont=Ubuntu Medium
 bpDateFont=Tahoma
 bpModFont=Tahoma Bold
@@ -68,8 +69,9 @@ tipSize=15
 scoreRankSize=24
 
 #BP图组件字号
-bpUnameSize=24
+bpUnameSize=20
 bpNameSize=16
+bpQueryDateSize=16
 bpDateSize=14
 bpModSize=14
 bpPPSize=24
@@ -85,7 +87,9 @@ tipColor=#666666
 scoreRankColor=#000000
 
 #BP图组件颜色
-bpUnameColor=#333a59
+
+bpUnameColor=#de3397
+bpQueryDateColor=#666666
 #bpNameColor=#1a48a5
 bpNameColor=#3843a6
 bpDateColor=#888888
@@ -95,6 +99,9 @@ bpPPColor=#9492dc
 #BP图文字在图片上的坐标
 bpUnamex=37
 bpUnamey=25
+
+bpQueryDatex=707
+bpQueryDatey=31
 
 bp2Rankx=10
 bp2Ranky=2
