--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -4,7 +4,7 @@ key=25559acca3eea3e2c730cd65ee8a6b2da55b52c0
 #JDBC参数
 jdbcURL=jdbc:mysql://127.0.0.1:3306/osu?characterEncoding=UTF-8&useSSL=false
 jdbcUser=root
-jdbcPwd=123456
+jdbcPwd=cabbage3-1230V2
 
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657,2643555740
