--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>top.mothership.osubot</groupId>
     <artifactId>osubot</artifactId>
-    <version>1.1</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>osubot</name>
