修正了CMYK BG绘制失败的问题

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.43</version>
         </dependency>
-
+        <!--cmyk转换器-->
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-jpeg</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 </project>
