--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -24,7 +24,7 @@ bplimit=80
 
 # 模板路径。也可以使用硬盘上文件的绝对路径
 defaultbg=\\defaultbg.png
-userlayout=\\userlayout.png
+scoreRankBG=\\scorerank.png
 bptop=\\bptop.png
 bpmid2=\\bpmid2.png
 bpmid3=\\bpmid3.png
@@ -45,7 +45,7 @@ timeFont=Ubuntu Medium
 numberFont=Futura Std Medium
 diffFont=苹方
 tipFont=宋体
-scoreRankFont=Futura Std Medium
+scoreRankFont=Gayatri
 
 #BP组件字体
 bpUnameFont=Tahoma
@@ -66,7 +66,7 @@ countSize=24
 countDiffSize=18
 timeSize=18
 tipSize=15
-scoreRankSize=24
+scoreRankSize=50
 
 #BP图组件字号
 bpUnameSize=20
@@ -84,7 +84,7 @@ downColor=#4466FF
 timeColor=#BC2C00
 defaultColor=#222222
 tipColor=#666666
-scoreRankColor=#000000
+scoreRankColor=#FFFFFF
 
 #BP图组件颜色
 bpUnameColor=#de3397
@@ -159,9 +159,11 @@ ppDiffy=153
 rScorex=370
 rScorey=206
 
-scoreRankx=100
-scoreRanky=100
+scoreRankx=697
+scoreRanky=58
 
+scoreRank2x=722
+scoreRank2y=58
 accx=357
 accy=255
 
