*新增：BP列表新增BP序号/权重 *修正：超时/重试机制修改，由固定2秒变为2^(重试次数)秒

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -4,8 +4,8 @@ key=25559acca3eea3e2c730cd65ee8a6b2da55b52c0
 #JDBC参数
 jdbcURL=jdbc:mysql://127.0.0.1:3306/osu?characterEncoding=UTF-8&useSSL=false
 jdbcUser=root
-jdbcPwd=cabbage3-1230V2
-#jdbcPwd=123456
+#jdbcPwd=cabbage3-1230V2
+jdbcPwd=123456
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657,2643555740
 
@@ -54,7 +54,8 @@ bpNameFont=Ubuntu Medium
 bpDateFont=Tahoma
 bpModFont=Tahoma Bold
 bpPPFont=Tahoma Bold
-
+bpWeightFont=Ubuntu Medium
+bpNumFont=Ubuntu Medium
 
 #用户名片组件字号
 unameSize=48
@@ -75,6 +76,8 @@ bpQueryDateSize=16
 bpDateSize=14
 bpModSize=14
 bpPPSize=24
+bpWeightSize=14
+bpNumSize=14
 
 # 组件颜色,需要用#开头
 unameColor=#000000
@@ -86,21 +89,33 @@ defaultColor=#222222
 tipColor=#666666
 scoreRankColor=#FFFFFF
 
+
 #BP图组件颜色
 bpUnameColor=#de3397
 bpQueryDateColor=#666666
 #bpNameColor=#1a48a5
 bpNameColor=#3843a6
-bpDateColor=#888888
+bpDateColor=#696969
+bpNumColor=#a12e1e
+bpWeightColor=#a12e1e
 bpModColor=#222222
 #bpPPColor=#1f69ff
 bpPPColor=#9492dc
+
+
+
 #BP图文字在图片上的坐标
 bpUnamex=37
 bpUnamey=25
 
 bpQueryDatex=707
 bpQueryDatey=31
+
+bp2Numx=136
+bp2Numy=34
+
+bp2Weightx=221
+bp2Weighty=34
 
 bp2Rankx=10
 bp2Ranky=2
@@ -112,10 +127,16 @@ bp2Datex=31
 bp2Datey=34
 
 bp2Modx=493
-bp2Mody=33
+bp2Mody=34
 
 bp2PPx=709
 bp2PPy=28
+#-----------
+bp3Numx=136
+bp3Numy=48
+
+bp3Weightx=221
+bp3Weighty=48
 
 bp3Rankx=10
 bp3Ranky=1
@@ -130,10 +151,11 @@ bp3Datex=31
 bp3Datey=48
 
 bp3Modx=493
-bp3Mody=47
+bp3Mody=48
 
 bp3PPx=709
 bp3PPy=35
+
 
 
 # 用户图各个组件坐标，coordinate
