--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -4,8 +4,8 @@ key=25559acca3eea3e2c730cd65ee8a6b2da55b52c0
 #JDBC参数
 jdbcURL=jdbc:mysql://127.0.0.1:3306/osu?characterEncoding=UTF-8&useSSL=false
 jdbcUser=root
-#jdbcPwd=cabbage3-1230V2
-jdbcPwd=123456
+jdbcPwd=cabbage3-1230V2
+#jdbcPwd=123456
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657,2643555740
 
@@ -24,6 +24,7 @@ bplimit=80
 
 # 模板路径。也可以使用硬盘上文件的绝对路径
 defaultbg=\\defaultbg.png
+layout=\\layout.png
 scoreRankBG=\\scorerank.png
 bptop=\\bptop.png
 bpmid2=\\bpmid2.png
