加入基于md5的图片复读检测，以及消息可以混杂图片的功能

--- a/src/main/resources/cabbage.properties
+++ b/src/main/resources/cabbage.properties
@@ -5,7 +5,7 @@ key=25559acca3eea3e2c730cd65ee8a6b2da55b52c0
 jdbcURL=jdbc:mysql://127.0.0.1:3306/osu?characterEncoding=UTF-8&useSSL=false
 jdbcUser=root
 jdbcPwd=cabbage3-1230V2
-#jdbcPwd=123456
+jdbcDevPwd=123456
 #管理员QQ，用半角逗号分隔
 admin=2307282906,1335734657,2643555740
 
